Inicialização de implementação do sítio com Jekyll e bootstrap (estrural).